# prbuddy

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
config/agents/: author_training.yaml  research.yaml  reviewer_qa.yaml
config/agents/author/: author_engagement.yaml  author_training.yaml
config/agents/common/: research.yaml
config/agents/reviewer/: reviewer_qa.yaml
evals/: __init__.py  conftest.py  test_knowledge_sharing.py
evals/scenarios/: __init__.py  base.py  edgar_approval.py  indirect_reference.py  technical_decision.py
prbuddy-extension/: README.md  manifest.json
prbuddy-extension/icons/: GENERATE_ICONS.md
prbuddy-extension/src/background/: service-worker.js  ws-manager.js
prbuddy-extension/src/content/: content-script.js  pr-detector.js  selection-handler.js
prbuddy-extension/src/popup/: popup.css  popup.html  (+1 more)
prbuddy-extension/styles/: content.css
scripts/: cli_test.py
src/: __init__.py
src/agents/: __init__.py  config_manager.py  factory.py  hooks.py  output_types.py  registry.py  schema.py  tools.py  types.py
src/observability/: __init__.py  logging.py  tracing.py
src/rag/: __init__.py  chunking.py  schema.py  store.py
src/server/: __init__.py  admin.py  app.py
src/sessions/: __init__.py  context_injection.py  flow_mode.py  manager.py  pipeline.py  pr_context.py  pr_context_repository.py  pr_fetcher.py  system_message.py  text_session.py
src/tools/: __init__.py  context_tools.py  extension_tools.py  github_tools.py  rag_tools.py
src/voice/: __init__.py  audio_utils.py  config.py  factory.py
static/: author.html  index.html  reviewer.html
tests/: __init__.py  conftest.py  test_config_manager.py  test_context_injection.py  test_pr_context.py  test_rag_store.py  test_sessions.py  test_tools.py
(+15 files in other folders)
